--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
     <body>
         <div>
-            <h1 id="titulo">Cadastro de Vagas de Estágio</h1>
+            <h1 id="titulo">Cadastro de Vagas de Estágio</h1> /*id => estiliza um único elemento no CSS*/
             <br>
             <p id="subtitulo">Informe seus dados</p>
             <br>
         </div>
         
         <form>
-            <fieldset class="grupo">
+            <fieldset class="grupo"> /*class => estiliza vários elementos no CSS*/
                 <div class="campo">
                     <label for="nome"><strong>Nome</strong></label>
                     <input type="text" name="nome" id="nome" required>
